create first migrations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_PASSWORD: 123
       POSTGRES_DB: nest
     networks:
-      - bookmarks
+      - alkottab
   test-db:
     image: postgres:13
     ports:
@@ -19,6 +19,6 @@ services:
       POSTGRES_PASSWORD: 123
       POSTGRES_DB: nest
     networks:
-      - bookmarks
+      - alkottab
 networks:
-  bookmarks:
+  alkottab:
