--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "db:dev:rm": "docker compose rm dev-db -s -f -v",
     "db:dev:up": "docker compose up dev-db -d",
     "prisma:dev:deploy": "prisma migrate deploy",
-    "db:dev:restart": "npm run db:dev:rm&&npm run db:dev:up&&timeout /t 3 /nobreak&&npm run prisma:dev:deploy",
+    "prisma:dev:migrate": "prisma migrate dev",
+    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && sleep 3 && npm run prisma:dev:deploy",
+    "db:dev:restart:win": "npm run db:dev:rm && npm run db:dev:up && timeout /t 3 /nobreak && npm run prisma:dev:deploy",
     "db:test:rm": "docker compose rm test-db -s -f -v",
     "db:test:up": "docker compose up test-db -d",
     "prisma:test:deploy": "dotenv -e .env.test -- prisma migrate deploy",
