adding testing command for windows

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "npm run db:dev:restart && jest",
+    "test:win": "npm run db:dev:restart:win && jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
