--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "db:test:rm": "docker compose rm test-db -s -f -v",
     "db:test:up": "docker compose up test-db -d",
     "prisma:test:deploy": "dotenv -e .env.test -- prisma migrate deploy",
-    "db:test:restart": "npm run db:test:rm&&npm run db:test:up&&timeout /t 3 /nobreak&&npm run prisma:test:deploy",
+    "db:test:restart": "npm run db:test:rm && npm run db:test:up && sleep 3 && npm run prisma:test:deploy",
+    "db:test:restart:win": "npm run db:test:rm && npm run db:test:up && timeout /t 3 /nobreak && npm run prisma:test:deploy",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -24,8 +25,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "npm run db:dev:restart && jest",
-    "test:win": "npm run db:dev:restart:win && jest",
+    "test": "npm run db:test:restart && jest",
+    "test:win": "npm run db:test:restart:win && jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
